--- a/ui/package.json
+++ b/ui/package.json
@@ -34,8 +34,7 @@
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
     "licensecheck": "^1.3.0",
-    "react-scripts": "^3.4.0",
-    "shelljs": "^0.8.0"
+    "react-scripts": "^3.4.0"
   },
   "scripts": {
     "server": "node server.js",
