--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,8 @@
     "react-dnd-html5-backend": "^10.0.0",
     "react-dom": "^16.12.0",
     "react-select": "^3.0.0",
-    "typescript": "^3.9.0"
+    "typescript": "^3.9.0",
+    "react-scripts": "^3.4.0"
   },
   "devDependencies": {
     "@types/classnames": "^2.2.9",
@@ -33,8 +34,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.18.0",
     "eslint-plugin-react-hooks": "^1.7.0",
-    "licensecheck": "^1.3.0",
-    "react-scripts": "^3.4.0"
+    "licensecheck": "^1.3.0"
   },
   "scripts": {
     "server": "node server.js",
